cmake_minimum_required(VERSION 3.5.1)                                                              
project(testcv)                                                                                      
set(CMAKE_CXX_STANDARD 11)                                                                         
set(CMAKE_CXX_FLAGS "-Wall -g")                                                                    
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
message("found ${OpenCV_INCLUDE_DIRS}")
add_executable(testcv test.cpp)
target_link_libraries(testcv ${OpenCV_LIBRARIES})