cmake_minimum_required(VERSION 3.5.1)                                                              
project(sfm)                                                                                      
set(CMAKE_CXX_STANDARD 11)                                                                         
set(CMAKE_CXX_FLAGS "-Wall -g")                                                                    
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
message("found ${OpenCV_INCLUDE_DIRS}")
message("root ${PROJECT_SOURCE_DIR}")
add_executable(sfm sfm.cpp)
target_link_libraries(sfm ${OpenCV_LIBRARIES})